# rust-smc

./: .gitignore  Cargo.toml  README.md
examples/: cargo.toml
examples/all/: main.rs
examples/fuzz/: main.rs
examples/single/: main.rs
examples/temperature/: main.rs
src/: error.rs  general.rs  key.rs  lib.rs  sensor.rs  smc.rs  smc_kit.rs
